
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int _r101 ;
 int _r102 ;
 int _r111 ;
 int _r112 ;
 int _r121 ;
 int _r122 ;
 int _r131 ;
 int _r132 ;
 int _r141 ;
 int _r142 ;
 int _r151 ;
 int _r152 ;
 int _r81 ;
 int _r82 ;
 int _r91 ;
 int _r92 ;
 int printf (char*,int,int ) ;

int leak_it(void)
{
 asm volatile (
 ".intel_syntax noprefix\n"
 ".code32\n"
 "jmp label1\n"
 "farcalllabel1:\n"
 ".code64\n"
 "mov eax, r8d\n"
 "shr r8, 32\n"
 "mov ebx, r8d\n"
 "mov ecx, r9d\n"
 "shr r9, 32\n"
 "mov edx, r9d\n"
 "mov esi, r10d\n"
 "shr r10, 32\n"
 "mov edi, r10d\n"
 ".att_syntax noprefix\n"
 "lret\n"
 ".intel_syntax noprefix\n"
 "farcalllabel2:\n"
 "mov eax, r11d\n"
 "shr r11, 32\n"
 "mov ebx, r11d\n"
 "mov ecx, r12d\n"
 "shr r12, 32\n"
 "mov edx, r12d\n"
 "mov esi, r13d\n"
 "shr r13, 32\n"
 "mov edi, r13d\n"
 ".att_syntax noprefix\n"
 "lret\n"
 ".intel_syntax noprefix\n"
 "farcalllabel3:\n"
 "mov eax, r14d\n"
 "shr r14, 32\n"
 "mov ebx, r14d\n"
 "mov ecx, r15d\n"
 "shr r15, 32\n"
 "mov edx, r15d\n"
 ".att_syntax noprefix\n"
 "lret\n"
 ".intel_syntax noprefix\n"
 ".code32\n"
 "label1:\n"
 ".att_syntax noprefix\n"
 "lcall $0x33, $farcalllabel1\n"
 ".intel_syntax noprefix\n"
 "mov _r81, eax\n"
 "mov _r82, ebx\n"
 "mov _r91, ecx\n"
 "mov _r92, edx\n"
 "mov _r101, esi\n"
 "mov _r102, edi\n"
 ".att_syntax noprefix\n"
 "lcall $0x33, $farcalllabel2\n"
 ".intel_syntax noprefix\n"
 "mov _r111, eax\n"
 "mov _r112, ebx\n"
 "mov _r121, ecx\n"
 "mov _r122, edx\n"
 "mov _r131, esi\n"
 "mov _r132, edi\n"
 ".att_syntax noprefix\n"
 "lcall $0x33, $farcalllabel3\n"
 ".intel_syntax noprefix\n"
 "mov _r141, eax\n"
 "mov _r142, ebx\n"
 "mov _r151, ecx\n"
 "mov _r152, edx\n"
 ".att_syntax noprefix\n"
 );

 printf(" R8=%08x%08x\n", _r82, _r81);
 printf(" R9=%08x%08x\n", _r92, _r91);
 printf("R10=%08x%08x\n", _r102, _r101);
 printf("R11=%08x%08x\n", _r112, _r111);
 printf("R12=%08x%08x\n", _r122, _r121);
 printf("R13=%08x%08x\n", _r132, _r131);
 printf("R14=%08x%08x\n", _r142, _r141);
 printf("R15=%08x%08x\n", _r152, _r151);
 return 0;
}
